--- a/style.css
+++ b/style.css
@@ -1,15 +1,44 @@
 *{
     box-sizing: border-box;
 }
+:root{
+    --border-color: #3494e4;
+}
 body{
-    background-color: #8e44ad;
+    background-color: #3494e4;
     color: #fff;
-    font-family: serif;
+    font-family: sans-serif;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     overflow: hidden;
     margin: 0;
+}
+h1{
+    margin:  10px 0px 0px;
+}
+h3{
+    font-weight: 400;
+    margin: 10px 0;
+}
+.cup{
+    background-color: #fff;
+    border: 4px solid var(--border-color);
+    color: var(--border-color);
+    border-radius: 0 0 40px 40px;
+    height: 330px;
+    width: 150px;
+    margin: 30px 0;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.cup .cup-small{
+    width: 50px;
+    height: 95px;
+    border-radius: 0 0 15px 15px;
+    background-color: rgba(255, 255, 255, 0.9);
 }
